--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ button {
   font-size: 20px;
 }
 
+.clear {
+    background-color: #615e5e;
+}
+
 .row {
   display: flex;
   justify-content: center; 
