added update display func for nums, operations, and dot. Also added clear

--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,7 @@ button {
   margin-bottom: 5px;      
 }
 
-.plus,
-.subtract,
-.equals,
-.multiply,
-.divide {
+.operation,
+.equals {
     background-color: orange;
 }
